WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111306
[WinCairo] Compile fix after
r144024
.
https://bugs.webkit.org/show_bug.cgi?id=111306
Summary
[WinCairo] Compile fix after r144024.
peavo
Reported
2013-03-04 05:52:58 PST
Need to add guard for USE(ACCELERATED_COMPOSITING).
Attachments
Patch
(2.17 KB, patch)
2013-03-04 05:57 PST
,
peavo
no flags
Details
Formatted Diff
Diff
Patch
(2.23 KB, patch)
2013-03-05 00:33 PST
,
peavo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-03-04 05:57:14 PST
Created
attachment 191216
[details]
Patch
James Robinson
Comment 2
2013-03-04 08:52:43 PST
Comment on
attachment 191216
[details]
Patch I swear I've seen this exact same patch before. I'll give the same feedback - I'd prefer to have trivial null-returning versions of these ScrollableArea functions defined when USE(ACCELERATED_COMPOSITING) is not set so the macro ugliness is in one place instead of being in every caller.
Zan Dobersek
Comment 3
2013-03-04 09:00:35 PST
(In reply to
comment #2
)
> (From update of
attachment 191216
[details]
) > I swear I've seen this exact same patch before.
Bug #111271
.
peavo
Comment 4
2013-03-05 00:33:05 PST
Created
attachment 191421
[details]
Patch
peavo
Comment 5
2013-03-05 00:34:17 PST
Updated patch after review feedback. Seems we don't need these methods for the !USE(ACCELERATED_COMPOSITING) case.
WebKit Review Bot
Comment 6
2013-03-05 12:56:54 PST
Comment on
attachment 191421
[details]
Patch Rejecting
attachment 191421
[details]
from commit-queue.
peavo@outlook.com
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
James Robinson
Comment 7
2013-03-05 14:41:39 PST
***
Bug 111271
has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 8
2013-03-05 14:49:08 PST
Comment on
attachment 191421
[details]
Patch Clearing flags on attachment: 191421 Committed
r144823
: <
http://trac.webkit.org/changeset/144823
>
WebKit Review Bot
Comment 9
2013-03-05 14:49:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug