[WinCairo] Compile fix after r144024. https://bugs.webkit.org/show_bug.cgi?id=111306

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-03-05
Reviewed by James Robinson.

* page/scrolling/ScrollingCoordinator.cpp: Added guard for USE(ACCELERATED_COMPOSITING).
* page/scrolling/ScrollingCoordinator.h: Added guard for USE(ACCELERATED_COMPOSITING).

Canonical link: https://commits.webkit.org/129847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144823 268f45cc-cd09-0410-ab3c-d52691b4dbfc